修改 nben-cloud -> ben

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nben-doc",
+  "name": "ben-doc",
   "version": "1.0.0",
   "main": "index.js",
   "author": "fourcows <fourcows@163.com>",
